@@ -1,3 +1,8 @@
+2021-03-31  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm-val.c (pvm_array_insert): Do not pvm_sizeof the
+	whole array for each inserted element.
+
 2021-03-29  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* pickles/btf.pk (BTF_Section): Check that the header in the
